# Caterm

./: .gitignore  .gitmodules  .spike.local.json.example  AGENTS.md  CHANGELOG.md  CONTEXT.md  LICENSE  Makefile  Package.swift  README.md  README.zh-CN.md  biome.json  bts.jsonc  conductor.json  package.json  project.yml  skills-lock.json  tsconfig.json  turbo.json
.claude/: CLAUDE.md
.codex/: config.toml
Manual/: host-chaining-checklist.md  pre-ship-two-mac-smoke.md  settings-smoke.md  sparkle-update-smoke.md
Resources/: AppIcon.icns  CatermAskpass.entitlements  CatermMobile.entitlements  Info.plist
Scripts/: build-dmg.sh  build-ios-app.sh  build-theme-catalog.sh  dev-codesign.sh  dev-run-app.sh  dev-sshd.sh  dev-watch-run.sh  dist-package.sh  embed-swiftpm-resources.sh  ios-host-sync-e2e.sh  ios-ssh-e2e.sh  lib-md2html.sh  lib-sparkle.sh  lib-version.sh  profile-identity-preflight.sh  publish-release.sh  release.sh  (+3 more)
apps/web/src-tauri/: Cargo.toml  tauri.conf.json
apps/web/src-tauri/capabilities/: default.json
apps/web/src-tauri/src/: lib.rs
apps/web/src-tauri/src/commands/: config_commands.rs  host_commands.rs  local_fs_commands.rs  mod.rs  settings_commands.rs  sftp_commands.rs  ssh_commands.rs
apps/web/src-tauri/src/crypto/: mod.rs  stronghold.rs
apps/web/src-tauri/src/db/: migrations.rs  models.rs
apps/web/src-tauri/src/fs_common/: types.rs
apps/web/src-tauri/src/local_fs/: ops.rs
apps/web/src-tauri/src/sftp/: manager.rs  mod.rs  session.rs  transfer.rs
apps/web/src-tauri/src/ssh/: handler.rs  manager.rs  mod.rs  session.rs
(+1022 files in other folders)
